--- a/libs/editor/WordPressEditor/src/main/res/layout/dialog_image_options.xml
+++ b/libs/editor/WordPressEditor/src/main/res/layout/dialog_image_options.xml
@@ -76,10 +76,11 @@
             android:singleLine="true"
             style="@style/ImageOptionsDialogInput"/>
 
+        <!-- android:text="@string/image_alignment" -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/image_alignment"
+            android:text="@string/app_name"
             style="@style/ImageOptionsDialogLabel"/>
 
         <Spinner
